# lighter-go

./: .cursorignore  .env.example  .gitignore  .golangci.yml  README-BUILD.md  README.md  debug_signature.go  example_grouped_orders_otoco.go  example_update_leverage.go  go.mod  go.sum  justfile
.github/workflows/: build.yml  ci.yml  test.yml
build-tmp/: lighter-signer-darwin-arm64.h  lighter-signer-linux-amd64.h  lighter-signer-windows-amd64.h
client/: client.go  http_requests.go  http_types.go  interface.go  sign_test.go  signer_client.go  tx_client.go  tx_get.go  ws_client.go  ws_public_service.go  ws_streams.go  ws_types.go
client/http/: account_api.go  block_api.go  bridge_api.go  candlestick_api.go  client.go  errors.go  http_types.go  info_api.go  order_api.go  requests.go  transaction_api.go
client/ws/: client.go  errors.go  handlers.go  options.go  orderbook.go  orderbook_test.go  subscription.go  subscription_test.go  types.go
cmd/server/: main.go  types.go
examples/: README.md  utils.go
examples/cpp/: CMakeLists.txt  example.cpp  trade_stream.cpp  websocket_example.cpp
examples/csharp/: README.md
examples/java/: pom.xml
examples/market_data/: get_orderbook.go  recent_trades.go
examples/orders/: create_limit_order.go
examples/php/: LighterSigner.php  README.md
examples/rust/: Cargo.toml
executables/: shared.go
java/: README.md  pom.xml
nonce/: api.go  api_test.go  manager.go  optimistic.go  optimistic_test.go
rust/: Cargo.toml  README.md
scripts/: test_wasm.mjs
sharedlib/: logic.go  main.go  newsharedlib.go  sharedlib.go  sharedlib.go.backup  sharedlib_js.go  state.go
tmp-build/: lighter-signer-darwin-arm64.h  lighter-signer-linux-arm64.h  lighter-signer-windows-amd64.h
types/: helpers.go  tx_request.go
wasm/: main.go
(+66 files in other folders)
